@@ -106,6 +106,7 @@ ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_DISPLAYED_IN_ADDRBOOK}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SHADOW_ADDRESS}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_LIB_STORAGE}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_DOMAIN_ADMIN}
+${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_WEBMAIL}-127.0.0.1-imapsecured
 ${LDAP_ATTR_DOMAIN_GLOBALADMIN}: yes
 EOF
 }
