@@ -11,8 +11,8 @@ deref           = never
 #iterate_attrs   = mail=user
 #iterate_filter  = (&(objectClass=mailUser)(accountStatus=active)(enabledService=mail))
 
-user_filter     = (&(objectClass=mailUser)(accountStatus=active)(enabledService=mail)(enabledService=%Ls%Lc)(|(mail=%u)(&(enabledService=shadowaddress)(shadowAddress=%u))))
+user_filter     = (&(objectClass=mailUser)(accountStatus=active)(enabledService=mail)(|(enabledService=%Ls%Lc)(enabledService=webmail-%r-%Ls%Lc))(|(mail=%u)(&(enabledService=shadowaddress)(shadowAddress=%u))))
 user_attrs      = mail=user,homeDirectory=home,=mail=maildir:~/Maildir/,mailQuota=quota_rule=*:bytes=%$
-pass_filter     = (&(objectClass=mailUser)(accountStatus=active)(enabledService=mail)(enabledService=%Ls%Lc)(|(mail=%u)(&(enabledService=shadowaddress)(shadowAddress=%u))))
+pass_filter     = (&(objectClass=mailUser)(accountStatus=active)(enabledService=mail)(|(enabledService=%Ls%Lc)(enabledService=webmail-%r-%Ls%Lc))(|(mail=%u)(&(enabledService=shadowaddress)(shadowAddress=%u))))
 pass_attrs      = mail=user,userPassword=password
 default_pass_scheme = CRYPT
