@@ -165,6 +165,7 @@ CREATE TABLE IF NOT EXISTS mailbox (
     enablepop3secured TINYINT(1) NOT NULL DEFAULT 1,
     enableimap TINYINT(1) NOT NULL DEFAULT 1,
     enableimapsecured TINYINT(1) NOT NULL DEFAULT 1,
+    enablewebmail TINYINT(1) NOT NULL DEFAULT 1,
     enabledeliver TINYINT(1) NOT NULL DEFAULT 1,
     enablelda TINYINT(1) NOT NULL DEFAULT 1,
     enablemanagesieve TINYINT(1) NOT NULL DEFAULT 1,
@@ -208,6 +209,7 @@ CREATE TABLE IF NOT EXISTS mailbox (
     INDEX (enablepop3secured),
     INDEX (enableimap),
     INDEX (enableimapsecured),
+    INDEX (enablewebmail),
     INDEX (enabledeliver),
     INDEX (enablelda),
     INDEX (enablemanagesieve),
